--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     font-family: Helvetica, Arial, sans-serif;
     background-color: lightsalmon;
     margin: 0;
-	padding: 1rem;
+	padding: 0rem;
 	display: grid;
 	place-items: center;
 	min-height: 100vh;
@@ -21,6 +21,10 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.para {
+	font-size: 1.2rem;
 }
 
 .second_title {
