--- a/style_secondary.css
+++ b/style_secondary.css
@@ -34,7 +34,7 @@ body {
 ul {
 	padding: 1rem;
 	margin: 0;
-	max-width: auto;
+	max-width: fit-content;
 	position: relative;
 }
 
@@ -51,7 +51,7 @@ ul::before {
 }
 
 li {
-	padding: 0.5rem 1.5rem 1rem;
+	padding: 0.75rem 0.75rem 0.75rem;
 	border-radius: 1.5rem;
 	background: peachpuff;
 }
